--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,19 @@ form
     background-color: #414342;
 }
 
+.error {
+  z-index: 100;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 5px 10px;
+  font-size: 20px;
+  text-align: center;
+  color: white;
+  background-color: red;
+}
+
 .section-title
 {
     position: relative;
